force-app/main/default/objects/ProductWarrantyTerm__c/ProductWarrantyTerm__c.object-meta.xml
<CustomObject>
    <label>제품 워런티</label>
    <nameField>
        <label>Product Warranty Term Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>