force-app/main/default/objects/ProductWarrantyTerm__c/fields/CoveredProductFamily__c.field-meta.xml
<CustomField>
    <fullName>CoveredProductFamily__c</fullName>
    <label>Covered Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>