force-app/main/default/objects/ProductWarrantyTerm__c/fields/CoveredProductId__c.field-meta.xml
<CustomField>
    <fullName>CoveredProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Warranty Term</relationshipLabel>
    <relationshipName>Product_Warranty_Term</relationshipName>
    <type>Lookup</type>
</CustomField>