force-app/main/default/objects/ProductWarrantyTerm__c/fields/WarrantyTermID__c.field-meta.xml
<CustomField>
    <fullName>WarrantyTermID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty Term ID</label>
    <referenceTo>WarrantyTerm__c</referenceTo>
    <relationshipLabel>Product Warranty Term</relationshipLabel>
    <relationshipName>Product_Warranty_Term</relationshipName>
    <type>Lookup</type>
</CustomField>